# countdown

./: .env.copy  .gitignore  LICENSE  README.md  clock.py  index.html  main.py  pyproject.toml  start_clock.sh  test_clock.py
countdown/: app.py  clock.py  utils.py
countdown/data/: busstop.py
countdown/static/styles/: mainpage.css
countdown/templates/: index.html  layout.html
todo_app/: app.py
todo_app/templates/: index.html
